--- a/.github/workflows/composer-diff.yml
+++ b/.github/workflows/composer-diff.yml
@@ -13,12 +13,15 @@ on:
 ## This workflow needs the `pull-request` permissions to work
 ## Refs: https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#permissions
 permissions:
-  pull-requests: write
   contents: read
+  pull-requests: write
+
 jobs:
   composer-lock-directories:
     timeout-minutes: 2
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     outputs:
       directories: ${{ steps.parse-working-directories.outputs.directories }}
     steps:
@@ -49,6 +52,9 @@ jobs:
     if: ${{ needs.composer-lock-directories.outputs.directories != '[]' }}
     name: Comment composer.lock diff
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
     strategy:
       fail-fast: false
       matrix:
